--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,7 @@
 			up now</button>
 		<div class="mt-20 mx-auto text-center max-w-3xl px-10">
 			<p class="mt-2 text-2xl font-extrabold text-gray-900 tracking-tight">
-				Everything1 you need to know about this app
+				Everything you need to know about this app
 			</p>
 			<p class="mt-5 max-w-prose mx-auto text-xl text-gray-500">
 				A great list of things it allows you to do
