--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@
 				class="font-medium text-white hover:bg-blue-600 bg-blue-500 px-3 py-2 -mt-2 rounded-lg">Sign up</a>
 		</nav>
 		<h1 class="text-center text-3xl mb-10 font-extrabold tracking-tight text-gray-900">
-			Use this great tool
+			Use this fucking tool
 		</h1>
 		<p class="text-center text-gray-700">Tagline that describes the tool</p>
 		<button
