--- a/src/layouts/common.astro
+++ b/src/layouts/common.astro
@@ -1,6 +1,8 @@
 ---
 const { title } = Astro.props;
-const url = Astro.request.url;
+const url = Astro.request.url; {
+    
+}
 ---
 
 <html lang="en">
